# he-transformer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIB.md  README.md  clang-tidy-ignore  he_call_frame.patch  run_clang_tidy.sh  test_model.patch
python/: CMakeLists.txt  README.md  build_wheel.sh.in  he_seal_client.cpp  setup.py
python/py_he_seal_client/: he_seal_client.cpp  he_seal_client.hpp
python/pyhe_client/: he_seal_client.cpp  he_seal_client.hpp  pyhe_client.cpp
src/: CMakeLists.txt  create_backend.cpp  get_coefficient_moduli.py  he_backend.cpp  he_backend.hpp  he_call_frame.cpp  he_call_frame.hpp  he_cipher_tensor.cpp  he_cipher_tensor.hpp  he_cipher_tensor_view.cpp  he_cipher_tensor_view.hpp  he_ciphertext.cpp  he_ciphertext.hpp  he_ckks_backend.cpp  he_ckks_backend.hpp  he_context.cpp  he_context.hpp  he_encryption_parameters.hpp  he_executable.cpp  he_executable.hpp  he_external_function.cpp  he_external_function.hpp  he_heaan_backend.cpp  he_heaan_backend.hpp  he_heaan_parameter.cpp  he_heaan_parameter.hpp  he_manager.cpp  he_manager.hpp  he_op_annotations.cpp  he_op_annotations.hpp  he_parameter.cpp  he_parameter.hpp  he_plain_tensor.cpp  he_plain_tensor.hpp  he_plain_tensor_view.cpp  he_plain_tensor_view.hpp  he_plaintext.cpp  he_plaintext.hpp  he_seal_backend.cpp  he_seal_backend.hpp  (+33 more)
src/aby/: aby_client_executor.cpp  aby_client_executor.hpp  aby_executor.cpp  aby_executor.hpp  aby_server_executor.cpp  aby_server_executor.hpp  aby_util.hpp  util.hpp
src/aby/kernel/: bounded_relu_aby.hpp  max_pool_aby.hpp  relu_aby.hpp
src/grpc/: custom_header_client.hpp  grpc_server.hpp
src/kernel/: add.cpp  add.hpp  avg_pool.cpp  avg_pool.hpp  batch_norm_inference.hpp  broadcast.cpp  broadcast.hpp  concat.cpp  concat.hpp  constant.cpp  constant.hpp  convolution.cpp  convolution.hpp  dot.cpp  dot.hpp  max_pool.hpp  multiply.cpp  multiply.hpp  negate.cpp  negate.hpp  one_hot.cpp  one_hot.hpp  pad.cpp  pad.hpp  relinearize.cpp  relinearize.hpp  reshape.cpp  reshape.hpp  result.cpp  result.hpp  reverse.hpp  slice.cpp  slice.hpp  subtract.cpp  subtract.hpp  sum.cpp  sum.hpp
src/kernel/bfv/: add_bfv.cpp  negate_bfv.cpp  subtract_bfv.hpp
src/kernel/heaan/: add_heaan.cpp  add_heaan.hpp  multiply_heaan.cpp  multiply_heaan.hpp  negate_heaan.cpp  negate_heaan.hpp  relinearize_heaan.cpp  relinearize_heaan.hpp  square_heaan.cpp  square_heaan.hpp  subtract_heaan.cpp  subtract_heaan.hpp
src/kernel/seal/: add_seal.cpp  add_seal.hpp  multiply_seal.cpp  multiply_seal.hpp  negate_seal.cpp  negate_seal.hpp  relinearize_seal.cpp  relinearize_seal.hpp  (+3 more)
src/logging/: ngraph_he_log.cpp  ngraph_he_log.hpp
src/op/: add.cpp  add.hpp  bounded_relu.cpp  bounded_relu.hpp  multiply.cpp  multiply.hpp  relinearize.hpp  result.cpp  result.hpp  square.hpp
src/pass/: bounded_relu.cpp  bounded_relu.hpp  he_constant_folding.cpp  he_constant_folding.hpp  he_fusion.cpp  he_fusion.hpp  he_liveness.cpp  he_liveness.hpp  insert_relinearize.cpp  insert_relinearize.hpp  propagate_he_annotations.cpp  propagate_he_annotations.hpp  supported_ops.cpp  supported_ops.hpp
src/primes/: get_coefficient_moduli.py
src/protos/: CMakeLists.txt  helloworld.proto  message.proto
src/seal/: client_util.hpp  he_cipher_tensor.cpp  he_cipher_tensor.hpp  he_ciphertext.hpp  he_seal_backend.cpp  he_seal_backend.hpp  he_seal_cipher_tensor.cpp  he_seal_cipher_tensor.hpp  he_seal_ckks_backend.hpp  he_seal_client.cpp  he_seal_client.hpp  he_seal_encryption_parameters.cpp  he_seal_encryption_parameters.hpp  he_seal_executable.cpp  he_seal_executable.hpp  he_seal_parameter.hpp  he_seal_util.hpp  seal_ciphertext_wrapper.cpp  seal_ciphertext_wrapper.hpp  seal_ckks_util.hpp  seal_plaintext_wrapper.cpp  seal_plaintext_wrapper.hpp  seal_util.cpp  seal_util.hpp  unit_test.manifest  util.hpp
src/tcp/: new_tcp.hpp  tcp_client.cpp  tcp_client.hpp  tcp_message.cpp  tcp_message.hpp  tcp_server.cpp  tcp_server.hpp  tcp_session.cpp  tcp_session.hpp
src/util/: fixed_point.hpp
test/: .clang-tidy  CMakeLists.txt  README.md  configure_test.cmake  cpu.txt  crypto_bench.cpp  diff.txt  he_heaan_disabled_test.manifest  he_heaan_disabled_test.manifest_old  he_res.txt  he_seal_disabled_test.manifest  he_test.txt  loader.hpp  main.cpp  main_cryptonets.cpp  run_selected_unit_test.sh  test_aby.cpp  test_add.in.cpp  test_all.in.cpp  test_avg_pool.in.cpp  test_basics.cpp  test_basics.in.cpp  test_batch_norm_inference.in.cpp  test_bounded_relu.cpp  test_broadcast.in.cpp  test_cifar10.cpp  test_client_server.in.cpp  test_concat.in.cpp  test_constant.in.cpp  test_convolution.in.cpp  test_cryptonets.cpp  test_debug.cpp  test_divide.in.cpp  test_dot.in.cpp  test_encryption_parameters.cpp  test_exp.in.cpp  test_grpc.cpp  test_he_backend.cpp  test_he_backend.hpp  test_he_fusion.cpp  (+58 more)
test/client_server/: CMakeLists.txt  main_client.cpp  main_server.cpp
test/model/: U100.save  W.save  W100.save  Wy.save  Wy100.save  b.save  b100.save  by.save  by100.save  he_seal_ckks_cifar10_config.json  he_seal_ckks_config_13.json  he_seal_ckks_config_13_bnn.json  he_seal_ckks_config_14.json  he_seal_ckks_config_N10_L4_27bits.json  he_seal_ckks_config_N10_L4_debug.json  he_seal_ckks_config_N10_L5.json  he_seal_ckks_config_N10_L6.json  he_seal_ckks_config_N11_L2.json  he_seal_ckks_config_N11_L3_18bits.json  he_seal_ckks_config_N11_L4_27bits.json  he_seal_ckks_config_N12_L2.json  he_seal_ckks_config_N12_L3.json  he_seal_ckks_config_N12_L4.json  he_seal_ckks_config_N12_L4_27bits.json  he_seal_ckks_config_N13_L2.json  he_seal_ckks_config_N13_L3.json  he_seal_ckks_config_N13_L4.json  he_seal_ckks_config_N13_L5.json  he_seal_ckks_config_N13_L6.json  he_seal_ckks_config_N13_L7.json  he_seal_ckks_config_N14_L7.json  he_seal_ckks_config_N9_L4_debug.json  heaan_config_14.json  mnist_cryptonets_batch5.js  mnist_cryptonets_batch_1.js  mnist_cryptonets_batch_1.json  mnist_cryptonets_batch_1024.js  mnist_cryptonets_batch_1024.json  mnist_cryptonets_batch_128.json  mnist_cryptonets_batch_16.json  (+32 more)
test_he/: CMakeLists.txt  README.md  test_he.cmake  test_seal.cpp
(+1618 files in other folders)
